--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fullcalendar/daygrid": "^6.1.8",
     "bootstrap": "^5.3.0",
     "chart.js": "^3.3.2",
+    "file-saver": "^2.0.5",
     "ng-block-ui": "^4.0.1",
     "primeflex": "^3.2.1",
     "primeicons": "6.0.1",
@@ -33,6 +34,7 @@
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "web-animations-js": "^2.3.2",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -44,6 +46,7 @@
     "@angular-eslint/template-parser": "^15.1.0",
     "@angular/cli": "^15.1.0",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/parser": "5.37.0",
